...
            android:id="@+id/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:text="購買" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
